@@ -1,6 +1,6 @@
 /* mpz_scan1 -- search for a 1 bit.
 
-Copyright 2000-2002, 2004, 2012 Free Software Foundation, Inc.
+Copyright 2000-2002, 2004, 2012, 2015 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library.
 
