@@ -1,4 +1,4 @@
-/* Copyright 2013, 2014 Free Software Foundation, Inc.
+/* Copyright 2013-2015 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library test suite.
 
